fix: prevent overflow caused by install code
probably better to refactor in future but creates a better small screen experience for now

--- a/site/style.css
+++ b/site/style.css
@@ -258,6 +258,7 @@ p {
   border: 0.0625rem solid var(--surface0);
   border-radius: 0.375rem;
   padding: 1rem;
+  min-width: 0;
 }
 
 .install-method h3 {
@@ -288,7 +289,6 @@ p {
   border: 0.0625rem solid var(--surface1);
   color: var(--overlay0);
   font-family: var(--font-mono);
-  font-size: 0.6875rem;
   padding: 0.25rem 0.5rem;
   border-radius: 0.25rem;
   cursor: pointer;
